# dp100_monitor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: default.yaml  logging.yaml
src/device/: data_collector.py  dp100_interface.py
src/gui/: callbacks.py  dashboard.py
src/gui/components/: controls.py  realtime_plot.py
src/storage/: data_manager.py  data_models.py
src/utils/: config.py  logger.py  performance.py
